--- a/restaurant.html
+++ b/restaurant.html
@@ -16,7 +16,7 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
+      <h1><a tabindex="0" aria-label="Home" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" role="navigation" aria-label="breadcrumb">
@@ -45,7 +45,7 @@
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container" aria-label="Restaurant reviews" role="reviews">
-      <ul id="reviews-list"></ul>
+      <ul tabindex="0" id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
   </main>
